--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tanatos</title>
     <!-- Normalize -->
     <link rel="stylesheet" href="css/vandors/normalize.css">
     <!-- Bootsrtap -->
@@ -77,7 +77,7 @@
         =========================================================== -->
 
     <section class="features py-5" id="features">
-        <div class="title-section mb-5 pb-5 text-center">
+        <div class="title-section  mb-lg-5 mb-3 pb-5 text-center">
             <h2 class="title">My <span class="mainColor">Features</span></h2>
         </div> <!-- ./title-section -->
         <div class="container">
@@ -433,7 +433,7 @@
     <!-- ==========================================================
         Scroll Top Page
         =========================================================== -->
-        <i class="fa fa-angle-up" aria-hidden="true"></i>
+    <i class="fa fa-angle-up" aria-hidden="true"></i>
 
 
     <!-- Libiry Jquery -->
