--- a/index-ar.html
+++ b/index-ar.html
@@ -487,7 +487,9 @@
         <!-- ==========================================================
         Scroll Top Page
         =========================================================== -->
-        <i class="fa fa-angle-up" aria-hidden="true"></i>
+        <div class="up-page">
+            <i class="fa fa-angle-up" aria-hidden="true"></i>
+        </div>
 
         <!-- Libiry Jquery -->
         <script src="js/vandors/jquery-3.0.min.js"></script>
